--- a/FreshKafka-dotNet-Standard/FreshKafka-dotNet-Standard/FreshKafka-dotNet-Standard.csproj
+++ b/FreshKafka-dotNet-Standard/FreshKafka-dotNet-Standard/FreshKafka-dotNet-Standard.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>FreshKafka_dotNet_Standard</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.2.1" />
+  </ItemGroup>
+
 </Project>
