--- a/FreshKafka-withoutGitignore/FreshKafka-withoutGitignore/FreshKafka-withoutGitignore.csproj
+++ b/FreshKafka-withoutGitignore/FreshKafka-withoutGitignore/FreshKafka-withoutGitignore.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>FreshKafka_withoutGitignore</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.2.1" />
+  </ItemGroup>
+
 </Project>
